--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -165,12 +165,26 @@ p {
 </style>
 </head>
 <body>
-<h1>Responsive Layout</h1>
+<h1>Our Menu</h1>
 
+  
 <div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 2 Wow this is cool</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
+  <section>
+    <h2>Vegetable soup<h2>
+  <div class="col-lg-3 col-md-6"><p>Sweet potatoes or regular potatoes, cut into 1/2-inch cubes.
+Butternut squash, cut into 1/2-inch cubes.
+Green beans, trimmed and cut into 1-inch long segments.
+Bell pepper, chopped.</p></div>
+      <h3>Noodles<h3>
+  <div class="col-lg-3 col-md-6"><p>Gather the Noodle Ingredients. To make the homemade noodle dough, grab your flour, salt, eggs, oil, and water. ...
+Mix the Dough. In a large mixing bowl ($8, Bed Bath & Beyond) stir together flour and the salt. ...
+Knead the Dough. ...
+Roll the Dough. ...
+Cut the Noodles. ...
+Storing Homemade Noodles.</p></div>
+        <h4>Fried Rice<h4>
+  <div class="col-lg-3 col-md-6"><p>Fry the rice by lightly browning in a pan or wok.
+Stir-fry the onions, garlic, and carrots until tender.</p></div>
   
 </div>
 
