--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -23,6 +23,17 @@ p {
   font-family: Helvetica;
   color: white;
 }
+  
+#p1 {
+  background-color: #A52A2A;
+  width: 300px;
+  height: 300px;
+}
+#p2 {
+  background-color: #DEB887;
+  width: 50px;
+  height: 50px;
+}
 
 /* Simple Responsive Framework. */
 .row {
@@ -171,19 +182,19 @@ p {
 <div class="row">
   <section>
     <h2>Vegetable soup<h2>
-  <div class="col-lg-3 col-md-6"><p>Sweet potatoes or regular potatoes, cut into 1/2-inch cubes.
+  <div class="col-lg-4 col-md-6"><p>Sweet potatoes or regular potatoes, cut into 1/2-inch cubes.
 Butternut squash, cut into 1/2-inch cubes.
 Green beans, trimmed and cut into 1-inch long segments.
 Bell pepper, chopped.</p></div>
       <h3>Noodles<h3>
-  <div class="col-lg-3 col-md-6"><p>Gather the Noodle Ingredients. To make the homemade noodle dough, grab your flour, salt, eggs, oil, and water. ...
+  <div class="col-lg-4 col-md-6"><p>Gather the Noodle Ingredients. To make the homemade noodle dough, grab your flour, salt, eggs, oil, and water. ...
 Mix the Dough. In a large mixing bowl ($8, Bed Bath & Beyond) stir together flour and the salt. ...
 Knead the Dough. ...
 Roll the Dough. ...
 Cut the Noodles. ...
 Storing Homemade Noodles.</p></div>
         <h4>Fried Rice<h4>
-  <div class="col-lg-3 col-md-6"><p>Fry the rice by lightly browning in a pan or wok.
+  <div class="col-lg-4 col-md-6"><p>Fry the rice by lightly browning in a pan or wok.
 Stir-fry the onions, garlic, and carrots until tender.</p></div>
   
 </div>
