--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -187,19 +187,19 @@ p {
   
 <div class="row">
   <section>
-    <h2>Vegetable soup<h2>
+    <h2>Vegetable soup</h2>
   <div class="col-lg-4 col-md-6"><p>Sweet potatoes or regular potatoes, cut into 1/2-inch cubes.
 Butternut squash, cut into 1/2-inch cubes.
 Green beans, trimmed and cut into 1-inch long segments.
 Bell pepper, chopped.</p></div>
-      <h3>Noodles<h3>
+      <h3>Noodles</h3>
   <div class="col-lg-4 col-md-6"><p>Gather the Noodle Ingredients. To make the homemade noodle dough, grab your flour, salt, eggs, oil, and water. ...
 Mix the Dough. In a large mixing bowl ($8, Bed Bath & Beyond) stir together flour and the salt. ...
 Knead the Dough. ...
 Roll the Dough. ...
 Cut the Noodles. ...
 Storing Homemade Noodles.</p></div>
-        <h4>Fried Rice<h4>
+        <h4>Fried Rice</h4>
   <div class="col-lg-4 col-md-6"><p>Fry the rice by lightly browning in a pan or wok.
 Stir-fry the onions, garlic, and carrots until tender.</p></div>
   
