--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -14,8 +14,8 @@ h1 {
 }
    h2{
     position: relative;
-  top: 24px;
-  right: 16.563px;
+  top: 65px;
+  right: 65px;
   }
 
 
@@ -188,7 +188,7 @@ p {
 <div class="row">
   <section>
     <h2>Vegetable soup</h2>
-  <div class="col-lg-4 col-md-6"><p>Sweet potatoes or regular potatoes, cut into 1/2-inch cubes.
+  <div class="col-lg-4 col-md-6"><p>Swet potatoes or regular potatoes, cut into 1/2-inch cubes.
 Butternut squash, cut into 1/2-inch cubes.
 Green beans, trimmed and cut into 1-inch long segments.
 Bell pepper, chopped.</p></div>
