--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -6,9 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/style.css" /> 
 
-
-/********** Base styles **********/
-
  
 
 </head>
@@ -18,21 +15,26 @@
   
 <div class="row">
   <section>
-    <h2>Vegetable soup</h2>
-  <div class="col-lg-4 col-md-6"><p>Swet potatoes or regular potatoes, cut into 1/2-inch cubes.
+    <h2 id="vegetable_soup">Vegetable soup</h2>
+  <div class="col-lg-4 col-md-6 col-sm-12"><p>Swet potatoes or regular potatoes, cut into 1/2-inch cubes.
 Butternut squash, cut into 1/2-inch cubes.
 Green beans, trimmed and cut into 1-inch long segments.
 Bell pepper, chopped.</p></div>
-      <h3>Noodles</h3>
-  <div class="col-lg-4 col-md-6"><p>Gather the Noodle Ingredients. To make the homemade noodle dough, grab your flour, salt, eggs, oil, and water. ...
+ </section>
+ <section>
+      <h3 id="noodles">Noodles</h3>
+  <div class="col-lg-4 col-md-6 col-sm-12"><p>Gather the Noodle Ingredients. To make the homemade noodle dough, grab your flour, salt, eggs, oil, and water. ...
 Mix the Dough. In a large mixing bowl ($8, Bed Bath & Beyond) stir together flour and the salt. ...
 Knead the Dough. ...
 Roll the Dough. ...
 Cut the Noodles. ...
 Storing Homemade Noodles.</p></div>
-        <h4>Fried Rice</h4>
-  <div class="col-lg-4 col-md-6"><p>Fry the rice by lightly browning in a pan or wok.
+ </section>
+ <section>
+        <h4 id="fried_rice">Fried Rice</h4>
+  <div class="col-lg-4 col-md-6 col-sm-12"><p>Fry the rice by lightly browning in a pan or wok.
 Stir-fry the onions, garlic, and carrots until tender.</p></div>
+ </section>
   
 </div>
 
