--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -13,26 +13,28 @@
 <h1>Our Menu</h1>
 
   
-<div class="row">
+<div class="col-lg-4 col-md-6 col-sm-12">
   <section>
     <h2 id="vegetable_soup">Vegetable soup</h2>
-  <div class="col-lg-4 col-md-6 col-sm-12"><p>Swet potatoes or regular potatoes, cut into 1/2-inch cubes.
+  <p>Swet potatoes or regular potatoes, cut into 1/2-inch cubes.
 Butternut squash, cut into 1/2-inch cubes.
 Green beans, trimmed and cut into 1-inch long segments.
 Bell pepper, chopped.</p></div>
  </section>
+ <div class="col-lg-4 col-md-6 col-sm-12">
  <section>
       <h3 id="noodles">Noodles</h3>
-  <div class="col-lg-4 col-md-6 col-sm-12"><p>Gather the Noodle Ingredients. To make the homemade noodle dough, grab your flour, salt, eggs, oil, and water. ...
+  <p>Gather the Noodle Ingredients. To make the homemade noodle dough, grab your flour, salt, eggs, oil, and water. ...
 Mix the Dough. In a large mixing bowl ($8, Bed Bath & Beyond) stir together flour and the salt. ...
 Knead the Dough. ...
 Roll the Dough. ...
 Cut the Noodles. ...
 Storing Homemade Noodles.</p></div>
  </section>
+ <div class="col-lg-4 col-md-6 col-sm-12">
  <section>
         <h4 id="fried_rice">Fried Rice</h4>
-  <div class="col-lg-4 col-md-6 col-sm-12"><p>Fry the rice by lightly browning in a pan or wok.
+  <p>Fry the rice by lightly browning in a pan or wok.
 Stir-fry the onions, garlic, and carrots until tender.</p></div>
  </section>
   
