--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -13,7 +13,7 @@
 <body>
 <h1>Our Menu</h1>
 
-  
+ <div class="row"> 
 <div class="col-lg-4 col-md-6 col-sm-12">
   <section>
     <h2 id="vegetable_soup">Vegetable soup</h2>
