--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta charset="utf-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Responsive Layout</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/style.css" /> 
-
- 
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assignment Solution for Module 2</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<h1>Our Menu</h1>
-
- <div class="row"> 
-
-  <section>
-    <h2 id="vegetable_soup">Vegetable soup</h2>
-  <div class="col-lg-4 col-md-6 col-sm-12"><p>Swet potatoes or regular potatoes, cut into 1/2-inch cubes.
-Butternut squash, cut into 1/2-inch cubes.
-Green beans, trimmed and cut into 1-inch long segments.
-Bell pepper, chopped.</p></div>
- </section>
- 
- <section>
-      <h3 id="noodles">Noodles</h3>
-  <div class="col-lg-4 col-md-6 col-sm-12"><p>Gather the Noodle Ingredients. To make the homemade noodle dough, grab your flour, salt, eggs, oil, and water. ...
-Mix the Dough. In a large mixing bowl ($8, Bed Bath & Beyond) stir together flour and the salt. ...
-Knead the Dough. ...
-Roll the Dough. ...
-Cut the Noodles. ...
-Storing Homemade Noodles.</p></div>
- </section>
- 
- <section>
-        <h4 id="fried_rice">Fried Rice</h4>
-  <div class="col-lg-4 col-md-6 col-sm-12"><p>Fry the rice by lightly browning in a pan or wok.
-Stir-fry the onions, garlic, and carrots until tender.</p></div>
- </section>
-  
-</div>
-
+    <h1>Our Menu</h1>
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="chicken">
+                <h2>Chicken</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis eveniet reiciendis, sint dignissimos placeat nobis ipsa, sequi nam nostrum architecto cumque officia. Nisi dignissimos corrupti dolore eius quibusdam enim sint.
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="beef">
+                <h2>Beef</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt soluta libero eaque pariatur minima autem cum reiciendis id dolores fugiat repellat aut tempore cupiditate nemo, itaque quas a provident repellendus!
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12">
+            <section class="sushi">
+                <h2>Sushi</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet enim maxime consequatur debitis ex quidem quam deserunt ullam quae aperiam sint, molestiae, eos dignissimos. Inventore fugiat accusantium aspernatur esse totam.
+                </p>
+            </section>
+        </div>
+    </div>
 </body>
+
 </html>
