--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Module2 Assignment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="https://github.com/falguni03/test/blob/main/mod2_assignment/css/style" />
+    <link rel="stylesheet" type="test/css" href="https://github.com/falguni03/test/blob/main/mod2_assignment/css/style" />
 </head>
 
 <body>
