--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Module2 Assignment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
     * {
     box-sizing: border-box;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -139,6 +140,7 @@ ul {
       width: 100%;
     }
   }
+    </style>
 
   /********** Mobile version **********/
   @media (max-width: 767px) {
