--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -1,68 +1,50 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Module2 Assignment</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-    <style>
-        h1{
-            color: maroon;
-        }
-    </style>
-    
+<meta charset="utf-8">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>Responsive Layout</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="css/style.css" /> 
+
+ 
+
 </head>
-
 <body>
-    <h1>Our Menu</h1>
+<h1>Our Menu</h1>
 
-    <div class="col-lg-4 col-md-6 col-sm-12">
-        <section>
-            <h2 id="chicken">Chicken</h2>
-            <ul>
-                <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
-                <li>Prosciutto-Wrapped Chicken with Garlic and Herb Cheese</li>
-                <li>Siri Pinter’s One-Pot Chicken Alfredo</li>
-                <li>Florentine Penne with Chicken</li>
-                <li>Garlic-Bread Chicken Nuggets with Balsamic Ketchup</li>
-            </ul>
-        </section>
-    </div>
+ <div class="row"> 
 
-    <div class="col-lg-4 col-md-6 col-sm-12">
-        <section>
-            <h2 id="pork">Pork</h2>
-            <ul>
-                <li>Pork Cheek and Black-Eyed Pea Chili</li>
-                <li>Braised Pork with Cherry Gravy</li>
-                <li>Aleppo-Pepper-Pork-and-Fennel Sandwiches</li>
-                <li>Herb-Roasted Pork Subs with Garlicky Spinach</li>
-                <li>Chinese-Style Ribs with Guava Barbecue Sauce</li>
-                <li>Pork Medallions with Onion Marmalade</li>
-            </ul>
-        </section>
-    </div>
+  <section>
+    <h2 id="Starters">Starters</h2>
+  <div class="col-lg-4 col-md-6 col-sm-12"><ul>
+  	<li>Kakori Kebabs</li>
+<li>Stir Fried Chilli Paneer</li>
+<li>Microwave Paneer Tikkas</li>
+<li>Aloo and Dal ki Tikki</li>
+<li>Cheese Balls</li></ul></div>
+ </section>
+ 
+ <section>
+      <h3 id="Pizza">Pizza</h3>
+  <div class="col-lg-4 col-md-6 col-sm-12"><ul>
+  	<li>Margherita</li>
+  	<li>Double Cheese Margherita</li>
+  	<li>Farm House</li>
+  	<li>Peppy Paneer</li>
+  	<li>Deluxe Veggie</li>
+  	<li>Mexican Green Wave</li></ul></div>
+ </section>
+ 
+ <section>
+        <h4 id="Burger">Burger</h4>
+  <div class="col-lg-4 col-md-6 col-sm-12"><ul>
+  	<li>Veg Whopper</li>
+  	<li>Crispy Veg Burger</li>
+  	<li>Paneer King Melt Burger</li></ul></div>
+ </section>
+  
+</div>
 
-    <div class="col-lg-4 col-md-12 col-sm-12">
-        <section>
-            <h2 id="steak">Steak</h2>
-            <ul>
-                <li>Butter-Basted Rib Eye Steaks</li>
-                <li>Balsamic Marinated Flank Steak</li>
-                <li>Grilled Hanger Steak with Kimchi-Apple Slaw</li>
-                <li>Throwback Porterhouse Steaks</li>
-                <li>Minute Steak Stacks with Herbed Anchovy Butter</li>
-                <li>Grilled Skirt Steak with Salsa Verde</li>
-            </ul>
-        </section>
-    </div>
-    <div class="col-lg-12 col-md-12 col-sm-12">
-        <p>Github repository for this assignment can be found
-            <a href="https://github.com/GuanqiaoDing/Coursera-web-development/tree/master/module2_solution" target="_blank">here</a>.
-        </p>
-    </div>
 </body>
-
 </html>
