--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -14,36 +14,38 @@
 <h1>Our Menu</h1>
 
  <div class="row"> 
-
+<div class="col-lg-4 col-md-6 col-sm-12">
   <section>
     <h2 id="Starters">Starters</h2>
-  <div class="col-lg-4 col-md-6 col-sm-12"><ul>
+  <ul>
   	<li>Kakori Kebabs</li>
 <li>Stir Fried Chilli Paneer</li>
 <li>Microwave Paneer Tikkas</li>
 <li>Aloo and Dal ki Tikki</li>
-<li>Cheese Balls</li></ul></div>
+<li>Cheese Balls</li></ul>
  </section>
- 
+ </div>
+ <div class="col-lg-4 col-md-6 col-sm-12"><ul>
  <section>
       <h3 id="Pizza">Pizza</h3>
-  <div class="col-lg-4 col-md-6 col-sm-12"><ul>
+  
   	<li>Margherita</li>
   	<li>Double Cheese Margherita</li>
   	<li>Farm House</li>
   	<li>Peppy Paneer</li>
   	<li>Deluxe Veggie</li>
-  	<li>Mexican Green Wave</li></ul></div>
+  	<li>Mexican Green Wave</li></ul>
  </section>
- 
+  </div>
+ <div class="col-lg-4 col-md-6 col-sm-12">
  <section>
         <h4 id="Burger">Burger</h4>
-  <div class="col-lg-4 col-md-6 col-sm-12"><ul>
+  <ul>
   	<li>Veg Whopper</li>
   	<li>Crispy Veg Burger</li>
-  	<li>Paneer King Melt Burger</li></ul></div>
+  	<li>Paneer King Melt Burger</li></ul>
  </section>
-  
+  </div>
 </div>
 
 </body>
