--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -25,10 +25,10 @@
 <li>Cheese Balls</li></ul>
  </section>
  </div>
- <div class="col-lg-4 col-md-6 col-sm-12"><ul>
+ <div class="col-lg-4 col-md-6 col-sm-12">
  <section>
       <h2 id="Pizza">Pizza</h2>
-  
+  <ul>
   	<li>Margherita</li>
   	<li>Double Cheese Margherita</li>
   	<li>Farm House</li>
